Set word-wrap on hardware items for VM detail so they stay in their menu. Fixed a bug when creating 2+ storage devices. Cleaned up logging. Re-enabled diplaying VM detail after creating it.

--- a/styles/ui.css
+++ b/styles/ui.css
@@ -362,6 +362,7 @@ h2.corner:before {
 	background-position: 5px 7px;
 	cursor: pointer;
 	box-shadow: inset 0px 3px 6px #333;
+	word-wrap: break-word;
 }
 
 #vm_detail ul.hardware li.selected {
